--- a/KeepCoding/BootCamp/Spark/notebook/ScalaSql/3.Ejercicio.ipynb
+++ b/KeepCoding/BootCamp/Spark/notebook/ScalaSql/3.Ejercicio.ipynb
@@ -2,18 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "34bf7eb6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "import org.apache.spark.sql.SparkSession\n",
-       "spark: org.apache.spark.sql.SparkSession = org.apache.spark.sql.SparkSession@65d0cb7\n"
+       "Intitializing Scala interpreter ..."
       ]
      },
-     "execution_count": 14,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Spark Web UI available at http://192.168.0.11:4040\n",
+       "SparkContext available as 'sc' (version = 3.1.2, master = local[*], app id = local-1633349258699)\n",
+       "SparkSession available as 'spark'\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "import org.apache.spark.sql.SparkSession\n",
+       "spark: org.apache.spark.sql.SparkSession = org.apache.spark.sql.SparkSession@ffa8209\n"
+      ]
+     },
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "fbd576a4",
    "metadata": {},
    "outputs": [
@@ -40,7 +60,7 @@
        "parquet: (spark: org.apache.spark.sql.SparkSession)Unit\n"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "a5809687",
    "metadata": {},
    "outputs": [
@@ -79,7 +99,7 @@
        "avro: (spark: org.apache.spark.sql.SparkSession)Unit\n"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "ee3e30d6",
    "metadata": {},
    "outputs": [],
@@ -118,6 +138,14 @@
     "parquet(spark)\n",
     "avro(spark)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28d7191f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
