--- a/NOTEBOOKS/Bosonit/RETOS-Spark for Data Engineers/Spark for Data Engineers 1.ipynb
+++ b/NOTEBOOKS/Bosonit/RETOS-Spark for Data Engineers/Spark for Data Engineers 1.ipynb
@@ -81,7 +81,7 @@
      "data": {
       "text/plain": [
        "Spark Web UI available at http://192.168.0.11:4040\n",
-       "SparkContext available as 'sc' (version = 3.1.2, master = local[*], app id = local-1634215397271)\n",
+       "SparkContext available as 'sc' (version = 3.1.2, master = local[*], app id = local-1634438444579)\n",
        "SparkSession available as 'spark'\n"
       ]
      },
@@ -92,7 +92,7 @@
      "data": {
       "text/plain": [
        "import org.apache.spark.sql.SparkSession\n",
-       "spark: org.apache.spark.sql.SparkSession = org.apache.spark.sql.SparkSession@3426caf8\n"
+       "spark: org.apache.spark.sql.SparkSession = org.apache.spark.sql.SparkSession@3dceb78\n"
       ]
      },
      "execution_count": 1,
@@ -139,13 +139,13 @@
     "val trade_details = spark.read.format(\"csv\")\n",
     "                              .option(\"header\", \"true\")\n",
     "                              .option(\"delimiter\", \";\")\n",
-    "                              .load(\"./reto1/trade_details.csv\")\n",
+    "                              .load(\"./data/trade_details.csv\")\n",
     "                              .cache()\n",
     "\n",
     "val trade_details_snapshot = spark.read.format(\"csv\")\n",
     "                                       .option(\"header\", \"true\")\n",
     "                                       .option(\"delimiter\", \";\")\n",
-    "                                       .load(\"./reto1/trade_details_snapshot.csv\")\n",
+    "                                       .load(\"./data/trade_details_snapshot.csv\")\n",
     "                                       .cache()"
    ]
   },
@@ -174,7 +174,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
+   "id": "51c08c70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------------+-------------------+----------+\n",
+      "|origin_contract_number|origin_trade_number|  maturity|\n",
+      "+----------------------+-------------------+----------+\n",
+      "|              18622136|           19665185|2020-04-29|\n",
+      "|              18622136|           19665186|2020-12-30|\n",
+      "|              18724280|           19772399|2020-11-05|\n",
+      "|              18724280|           19772400|2021-11-05|\n",
+      "|              19883451|           20980932|2020-02-02|\n",
+      "|              19883451|           20980933|2020-01-19|\n",
+      "|              21622649|           22798004|2021-05-04|\n",
+      "|              21622649|           22798005|2021-05-11|\n",
+      "|              19622128|           20665177|2020-04-29|\n",
+      "|              19622128|           20665178|2020-12-30|\n",
+      "+----------------------+-------------------+----------+\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "trade_details_snapshot1: org.apache.spark.sql.DataFrame = [origin_contract_number: string, origin_trade_number: string ... 1 more field]\n"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val trade_details_snapshot1 = trade_details_snapshot\n",
+    "            .join(trade_details,\"origin_trade_number\")\n",
+    "            .select(trade_details_snapshot.col(\"origin_contract_number\"),\n",
+    "                    trade_details_snapshot.col(\"origin_trade_number\"),\n",
+    "                    trade_details_snapshot.col(\"maturity\")\n",
+    "                   )            \n",
+    "\n",
+    "trade_details_snapshot.unpersist()\n",
+    "trade_details_snapshot1.cache().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "9a4f0c2a",
    "metadata": {},
    "outputs": [
@@ -182,20 +232,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------------------+-------------------+-------------------+--------+\n",
-      "|origin_contract_number|origin_trade_number|           maturity|    diff|\n",
-      "+----------------------+-------------------+-------------------+--------+\n",
-      "|              19622128|           20665177|2020-04-29 00:00:00|    null|\n",
-      "|              19622128|           20665178|2020-12-30 00:00:00|21171600|\n",
-      "|              21622649|           22798004|2021-05-04 00:00:00|    null|\n",
-      "|              21622649|           22798005|2021-05-11 00:00:00|  604800|\n",
-      "|              19883451|           20980933|2020-01-19 00:00:00|    null|\n",
-      "|              19883451|           20980932|2020-02-02 00:00:00| 1209600|\n",
-      "|              18622136|           19665185|2020-04-29 00:00:00|    null|\n",
-      "|              18622136|           19665186|2020-12-30 00:00:00|21171600|\n",
-      "|              18724280|           19772399|2020-11-05 00:00:00|    null|\n",
-      "|              18724280|           19772400|2021-11-05 00:00:00|31536000|\n",
-      "+----------------------+-------------------+-------------------+--------+\n",
+      "+------------+\n",
+      "|trade_number|\n",
+      "+------------+\n",
+      "|    20665178|\n",
+      "|    22798005|\n",
+      "|    20980932|\n",
+      "|    19665186|\n",
+      "|    19772400|\n",
+      "+------------+\n",
       "\n"
      ]
     },
@@ -203,12 +248,12 @@
      "data": {
       "text/plain": [
        "import org.apache.spark.sql.expressions.Window\n",
-       "w: org.apache.spark.sql.expressions.WindowSpec = org.apache.spark.sql.expressions.WindowSpec@5f481a25\n",
+       "w: org.apache.spark.sql.expressions.WindowSpec = org.apache.spark.sql.expressions.WindowSpec@1565100f\n",
        "diff: org.apache.spark.sql.Column = (CAST(maturity AS BIGINT) - CAST(lag(maturity, 1, NULL) OVER (PARTITION BY origin_contract_number ORDER BY maturity ASC NULLS FIRST unspecifiedframe$()) AS BIGINT))\n",
-       "trade_details_snapshot2: org.apache.spark.sql.Dataset[org.apache.spark.sql.Row] = [origin_contract_number: string, origin_trade_number: string ... 2 more fields]\n"
+       "trade_details_snapshot2: org.apache.spark.sql.DataFrame = [trade_number: string]\n"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,18 +264,17 @@
     "val w = Window.partitionBy(\"origin_contract_number\").orderBy(\"maturity\")\n",
     "val diff = $\"maturity\".cast(\"long\") - lag(\"maturity\", 1).over(w).cast(\"long\")\n",
     "\n",
-    "val trade_details_snapshot2 = trade_details_snapshot\n",
+    "val trade_details_snapshot2 = trade_details_snapshot1\n",
     "            .select(   \n",
     "                $\"origin_contract_number\",\n",
     "                $\"origin_trade_number\",\n",
     "                to_timestamp($\"maturity\") as \"maturity\")\n",
     "            .withColumn(\"diff\", diff)\n",
     "            .where($\"diff\" > 0)\n",
-    "            .select($\"origin_trade_number\" as \"trade_number\")\n",
-    "            .cache()\n",
+    "            .select($\"origin_trade_number\" as \"trade_number\")            \n",
     "\n",
-    "trade_details_snapshot.unpersist()\n",
-    "trade_details_snapshot2.show()     "
+    "trade_details_snapshot1.unpersist()\n",
+    "trade_details_snapshot2.cache().show()     "
    ]
   },
   {
@@ -251,18 +295,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "id": "b3f6376b-fa7c-4226-a736-2c4f3b870a9e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "resultado: org.apache.spark.sql.Dataset[org.apache.spark.sql.Row] = [mfamily: string, mgroup: string ... 4 more fields]\n",
-       "res89: trade_details_snapshot2.type = [trade_number: string]\n"
+       "resultado: org.apache.spark.sql.DataFrame = [mfamily: string, mgroup: string ... 4 more fields]\n",
+       "res2: trade_details_snapshot2.type = [trade_number: string]\n"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,11 +320,10 @@
     "                         ($\"mtype\" === \"SWLEG\")\n",
     "                        ) || ($\"mtype\" === \"SWLEG\") && ($\"trade_number\" > 0)  \n",
     "                      )\n",
-    "               .drop($\"trade_number\")   \n",
-    "               .cache()\n",
+    "               .drop($\"trade_number\")                  \n",
     "\n",
     "trade_details.unpersist()\n",
-    "trade_details_snapshot2.unpersist()"
+    "trade_details_snapshot2.cache().unpersist()"
    ]
   },
   {
@@ -293,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "id": "dadcb308-a425-4812-81ba-d02df23a206f",
    "metadata": {},
    "outputs": [],
@@ -306,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "id": "b974044c",
    "metadata": {},
    "outputs": [
@@ -350,10 +393,10 @@
     {
      "data": {
       "text/plain": [
-       "res86: resultado.type = [mfamily: string, mgroup: string ... 4 more fields]\n"
+       "res4: resultado.type = [mfamily: string, mgroup: string ... 4 more fields]\n"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
