--- a/NOTEBOOKS/Bosonit/RETOS-Spark for Data Engineers/Spark for Data Engineers 1.ipynb
+++ b/NOTEBOOKS/Bosonit/RETOS-Spark for Data Engineers/Spark for Data Engineers 1.ipynb
@@ -81,7 +81,7 @@
      "data": {
       "text/plain": [
        "Spark Web UI available at http://192.168.0.11:4040\n",
-       "SparkContext available as 'sc' (version = 3.1.2, master = local[*], app id = local-1634438444579)\n",
+       "SparkContext available as 'sc' (version = 3.1.2, master = local[*], app id = local-1634454420694)\n",
        "SparkSession available as 'spark'\n"
       ]
      },
@@ -408,8 +408,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "e338054a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "<console>",
+     "evalue": "49: error: not found: value a",
+     "output_type": "error",
+     "traceback": [
+      "<console>:49: error: not found: value a",
+      "       val resultado = trade_details as a",
+      "                                        ^",
+      ""
+     ]
+    }
+   ],
+   "source": [
+    "import org.apache.spark.sql.expressions.Window\n",
+    "\n",
+    "val w = Window.partitionBy(\"origin_contract_number\").orderBy(\"maturity\")\n",
+    "val diff = $\"maturity\".cast(\"long\") - lag(\"maturity\", 1).over(w).cast(\"long\")\n",
+    "\n",
+    "val resultado = trade_details\n",
+    "                    .join(trade_details_snapshot\n",
+    "                          .join(trade_details,\"origin_trade_number\")\n",
+    "                          .select(trade_details_snapshot.col(\"origin_contract_number\"),\n",
+    "                                  trade_details_snapshot.col(\"origin_trade_number\"),\n",
+    "                                  trade_details_snapshot.col(\"maturity\")\n",
+    "                                 )     \n",
+    "                          .select($\"origin_contract_number\",\n",
+    "                                  $\"origin_trade_number\",\n",
+    "                                  to_timestamp($\"maturity\") as \"maturity\")\n",
+    "                          .withColumn(\"diff\", diff)\n",
+    "                          .where($\"diff\" > 0)\n",
+    "                          .select($\"origin_trade_number\" as \"trade_number\") , \n",
+    "                          $\"origin_trade_number\" === $\"trade_number\",\"left\" \n",
+    "                         )\n",
+    "                    .where(!(($\"mfamily\" === \"CURR\") && ($\"mgroup\" === \"FXD\") && \n",
+    "                             ($\"mtype\" === \"SWLEG\")\n",
+    "                            ) || ($\"mtype\" === \"SWLEG\") && ($\"trade_number\" > 0)  \n",
+    "                          )\n",
+    "                    .drop($\"trade_number\").cache()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "fb7711f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert(resultado.count() == 26)\n",
+    "assert(resultado.orderBy(\"origin_contract_number\").collect()(24)(4) == \"564367838\")\n",
+    "assert(resultado.orderBy(\"origin_contract_number\").collect()(19)(5) == \"NULL\")\n",
+    "assert(resultado.orderBy(\"origin_trade_number\").collect()(16)(5) == \"NULL\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a5fe7c88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------+-----+-------------------+----------------------+----------+\n",
+      "|mfamily|mgroup|mtype|origin_trade_number|origin_contract_number|  maturity|\n",
+      "+-------+------+-----+-------------------+----------------------+----------+\n",
+      "|    IRD|  BOND| null|          316391872|             678876251|2021-09-22|\n",
+      "|   CURR|   FXD|  FXD|           32734782|              54853428|2021-09-22|\n",
+      "|    IRD| LN_BR| null|               1111|                  2222|2022-10-06|\n",
+      "|    IRD|   IRS| null|            2222222|               2222222|2024-10-15|\n",
+      "|    SCF|   SCF|  SCF|            3815982|               3672136|      NULL|\n",
+      "|    IRD| LN_BR| null|           14596583|              13774383|2020-12-29|\n",
+      "|    IRD|   IRS| null|           18343978|              17356077|2024-10-15|\n",
+      "|    IRD| LN_BR| null|           19203839|              18176215|2022-10-06|\n",
+      "|    IRD|    CF| null|           20513130|              19433281|2021-07-06|\n",
+      "|    IRD|    CF| null|           20533916|              19453781|2023-07-06|\n",
+      "|    IRD|   IRS| null|           21183317|              20077630|2040-07-13|\n",
+      "|    IRD|   IRS| null|           33333333|              33333333|2024-10-15|\n",
+      "|    IRD|   IRS| null|          111222333|             111222333|2024-10-15|\n",
+      "|    IRD|   IRS| null|          222333111|             222333111|2020-12-30|\n",
+      "|    IRD|   IRS| null|          333111222|             333111222|2020-12-12|\n",
+      "|    IRD|   IRS| null|          444111222|             444111222|      NULL|\n",
+      "|    IRD|   IRS| null|          555111222|             555111222|      NULL|\n",
+      "|    IRD|   IRS| null|          564367838|             564367838|2024-10-15|\n",
+      "|    IRD|   IRS| null|          556111214|             556111214|      NULL|\n",
+      "|    EQD| EQUIT|  FWD|           10000001|              10000001|2019-07-02|\n",
+      "|    IRD|  BOND|  FWD|           10000009|              10000009|2021-06-12|\n",
+      "|   CURR|   FXD|SWLEG|           19665186|              18622136|2020-12-30|\n",
+      "|   CURR|   FXD|SWLEG|           19772400|              18724280|2021-11-05|\n",
+      "|   CURR|   FXD|SWLEG|           20980932|              19883451|      NULL|\n",
+      "|   CURR|   FXD|SWLEG|           22798005|              21622649|      NULL|\n",
+      "|   CURR|   FXD|SWLEG|           20665178|              19622128|2020-12-30|\n",
+      "+-------+------+-----+-------------------+----------------------+----------+\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "res10: resultado.type = [mfamily: string, mgroup: string ... 4 more fields]\n"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado.show(33)\n",
+    "resultado.unpersist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "179a20be",
    "metadata": {},
    "outputs": [],
    "source": []
