--- a/NOTEBOOKS/Bosonit/Master_UCM/2-Ejercicios/Realizados/Modelo B.ipynb
+++ b/NOTEBOOKS/Bosonit/Master_UCM/2-Ejercicios/Realizados/Modelo B.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -179,8 +179,50 @@
      "task": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- As of Date: string (nullable = true)\n",
+      " |-- Fiscal Year: string (nullable = true)\n",
+      " |-- Region: string (nullable = true)\n",
+      " |-- Borrower Country: string (nullable = true)\n",
+      " |-- Borrower Country Code: string (nullable = true)\n",
+      " |-- Project ID: string (nullable = true)\n",
+      " |-- Project Name: string (nullable = true)\n",
+      " |-- Procurement Type: string (nullable = true)\n",
+      " |-- Procurement Category: string (nullable = true)\n",
+      " |-- Procurement Method: string (nullable = true)\n",
+      " |-- Product line: string (nullable = true)\n",
+      " |-- Major Sector: string (nullable = true)\n",
+      " |-- WB Contract Number: integer (nullable = true)\n",
+      " |-- Contract Description: string (nullable = true)\n",
+      " |-- Contract Signing Date: string (nullable = true)\n",
+      " |-- Supplier: string (nullable = true)\n",
+      " |-- Supplier Country: string (nullable = true)\n",
+      " |-- Supplier Country Code: string (nullable = true)\n",
+      " |-- Total Contract Amount (USD): string (nullable = true)\n",
+      " |-- Borrower Contract Reference Number: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LÍNEA EVALUABLE, NO RENOMBRAR LAS VARIABLES\n",
+    "contractsDF = (spark\n",
+    "               .read\n",
+    "               .option(\"header\", \"true\")\n",
+    "               .option(\"inferSchema\", \"true\")\n",
+    "               .option(\"quote\", \"\\\"\")\n",
+    "               .option(\"escape\", \"\\\"\")\n",
+    "               .option(\"mode\", \"DROPMALFORMED\")\\\n",
+    "               .csv(\"../Datasets/Major_Contract_Awards.csv\") \n",
+    "              )\n",
+    "contractsDF.cache()\n",
+    "contractsDF.printSchema()"
+   ]
   },
   {
    "cell_type": "code",
@@ -233,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -248,7 +290,17 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.sql import functions as F\n",
+    "\n",
+    "contractsDFenteros = (contractsDF\n",
+    "                      .withColumn(\"Total Contract Amount (USD)\",\n",
+    "                                  F.regexp_replace(\"Total Contract Amount (USD)\", \n",
+    "                                                   \"\\$\", \n",
+    "                                                   \"\").cast(IntegerType())\n",
+    "                                 )\n",
+    "                     )"
+   ]
   },
   {
    "cell_type": "code",
@@ -383,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -398,7 +450,24 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# LÍNEA EVALUABLE, NO RENOMBRAR VARIABLES\n",
+    "contractsTranslatedDF = (contractsDFenteros\n",
+    "                         .withColumn(\"Region\",\n",
+    "                                     F.when(F.col(\"Region\") == \"LATIN AMERICA AND CARIBBEAN\",\n",
+    "                                            \"Latino America y Caribe\") \n",
+    "                                     .when(F.col(\"Region\") == \"SOUTH ASIA\", \"Sudasia\")\n",
+    "                                     .when(F.col(\"Region\") == \"AFRICA\", \"África\")\n",
+    "                                     .when(F.col(\"Region\") == \"MIDDLE EAST AND NORTH AFRICA\",\n",
+    "                                           \"Medio Oeste y Norte America\")\n",
+    "                                     .when(F.col(\"Region\") == \"EAST ASIA AND PACIFIC\",\n",
+    "                                           \"Este de Asia y Pacifico\")\n",
+    "                                     .when(F.col(\"Region\") == \"EUROPE AND CENTRAL ASIA\",\n",
+    "                                           \"Europa y Asia Central\")\n",
+    "                                     .otherwise(\"otros\")                                     \n",
+    "                                    )                        \n",
+    "                        )"
+   ]
   },
   {
    "cell_type": "code",
@@ -453,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -467,8 +536,68 @@
      "task": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Procurement Type</th>\n",
+       "      <th>Procurement Category</th>\n",
+       "      <th>Procurement Method</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>60</td>\n",
+       "      <td>5</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Procurement Type  Procurement Category  Procurement Method\n",
+       "0                60                     5                  18"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# LÍNEA EVALUABLE, NO RENOMBRAR VARIABLES\n",
+    "numeroCategoriasDF = (contractsTranslatedDF\n",
+    "                      .select(\"Procurement Type\",\n",
+    "                              \"Procurement Category\",\n",
+    "                              \"Procurement Method\")\n",
+    "                      .agg(F.countDistinct(\"Procurement Type\").alias(\"Procurement Type\"),\n",
+    "                           F.countDistinct(\"Procurement Category\").alias(\"Procurement Category\"),\n",
+    "                           F.countDistinct(\"Procurement Method\").alias(\"Procurement Method\")\n",
+    "                          )                     \n",
+    "                     )\n",
+    "\n",
+    "numeroCategoriasDF.toPandas()"
+   ]
   },
   {
    "cell_type": "code",
@@ -525,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -540,7 +669,26 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# LÍNEA EVALUABLE, NO RENOMBRAR VARIABLES\n",
+    "from pyspark.ml.feature import Bucketizer\n",
+    "from pyspark.ml.feature import StringIndexer\n",
+    "from pyspark.ml import Pipeline\n",
+    "\n",
+    "cortes = [-float(\"inf\"), 0, 100000, 200000, 300000, 400000, float(\"inf\")]\n",
+    "\n",
+    "bucketizer = Bucketizer(splits=cortes,\n",
+    "                        inputCol=\"Total Contract Amount (USD)\",\n",
+    "                        outputCol=\"TotalDiscretized\")\n",
+    "\n",
+    "indexer = StringIndexer(inputCol = \"Procurement Method\",\n",
+    "                        outputCol=\"ProcurementIndexed\", \n",
+    "                        handleInvalid=\"skip\")\n",
+    "\n",
+    "pipeline = Pipeline(stages=[indexer, bucketizer])\n",
+    "\n",
+    "contractsTransformedDF = pipeline.fit(contractsDFenteros).transform(contractsDFenteros)"
+   ]
   },
   {
    "cell_type": "code",
@@ -607,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -622,7 +770,41 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# LÍNEA EVALUABLE, NO RENOMBRAR VARIABLES\n",
+    "from pyspark.sql import Window\n",
+    "\n",
+    "paisWindow = Window().partitionBy(\"Borrower Country\")\n",
+    "\n",
+    "porcentajesDF = (contractsDFenteros.withColumn(\"Total Pais\",\n",
+    "                                               F.sum(\"Total Contract Amount (USD)\")\n",
+    "                                               .over(paisWindow)\n",
+    "                                              )\n",
+    "                )\n",
+    "\n",
+    "porcentajesDF = (porcentajesDF\n",
+    "                 .withColumn(\"Porcentaje Pais\", \n",
+    "                                         100*F.col(\"Total Contract Amount (USD)\")\n",
+    "                                              / F.col(\"Total Pais\")\n",
+    "                            )\n",
+    "                )\n",
+    "\n",
+    "porcentajesDF = (porcentajesDF\n",
+    "                 .withColumn(\"Media Pais\", \n",
+    "                             F.avg(\"Total Contract Amount (USD)\").over(paisWindow)\n",
+    "                            )\n",
+    "                )\n",
+    "\n",
+    "porcentajesDF = (porcentajesDF\n",
+    "                 .withColumn(\"Diff Porcentaje\", \n",
+    "                             ( (F.col(\"Total Contract Amount (USD)\") \n",
+    "                                - F.col(\"Media Pais\") \n",
+    "                               )\n",
+    "                              / F.col(\"Media Pais\") \n",
+    "                             )*100\n",
+    "                            )\n",
+    "                )"
+   ]
   },
   {
    "cell_type": "code",
