--- a/NOTEBOOKS/Bosonit/RETOS-Spark for Data Engineers/Spark for Data Engineers 1.ipynb
+++ b/NOTEBOOKS/Bosonit/RETOS-Spark for Data Engineers/Spark for Data Engineers 1.ipynb
@@ -64,18 +64,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "a5da8fad-c1ee-42ad-88ba-1c6587e6de5f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "import org.apache.spark.sql.SparkSession\n",
-       "spark: org.apache.spark.sql.SparkSession = org.apache.spark.sql.SparkSession@6d428e59\n"
+       "Intitializing Scala interpreter ..."
       ]
      },
-     "execution_count": 17,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Spark Web UI available at http://192.168.0.11:4040\n",
+       "SparkContext available as 'sc' (version = 3.1.2, master = local[*], app id = local-1635160233120)\n",
+       "SparkSession available as 'spark'\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "import org.apache.spark.sql.SparkSession\n",
+       "spark: org.apache.spark.sql.SparkSession = org.apache.spark.sql.SparkSession@52c9b89d\n"
+      ]
+     },
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "18334cd9-be3c-44e8-a9c3-417030a844e8",
    "metadata": {},
    "outputs": [
@@ -110,7 +130,7 @@
        "trade_details_snapshot: org.apache.spark.sql.Dataset[org.apache.spark.sql.Row] = [mfamily: string, mgroup: string ... 4 more fields]\n"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "3d5ce5f1",
    "metadata": {},
    "outputs": [
@@ -142,7 +162,7 @@
        "import spark.sqlContext.implicits._\n"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "51c08c70",
    "metadata": {},
    "outputs": [
@@ -185,7 +205,7 @@
        "trade_details_snapshot1: org.apache.spark.sql.DataFrame = [origin_contract_number: string, origin_trade_number: string ... 1 more field]\n"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "9a4f0c2a",
    "metadata": {},
    "outputs": [
@@ -212,15 +232,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------+\n",
-      "|trade_number|\n",
-      "+------------+\n",
-      "|    20665178|\n",
-      "|    22798005|\n",
-      "|    20980932|\n",
-      "|    19665186|\n",
-      "|    19772400|\n",
-      "+------------+\n",
+      "+----------------------+-------------------+----------+--------+\n",
+      "|origin_contract_number|origin_trade_number|  maturity|    diff|\n",
+      "+----------------------+-------------------+----------+--------+\n",
+      "|              19622128|           20665177|1588111200|    null|\n",
+      "|              19622128|           20665178|1609282800|21171600|\n",
+      "|              21622649|           22798004|1620079200|    null|\n",
+      "|              21622649|           22798005|1620684000|  604800|\n",
+      "|              19883451|           20980933|1579388400|    null|\n",
+      "|              19883451|           20980932|1580598000| 1209600|\n",
+      "|              18622136|           19665185|1588111200|    null|\n",
+      "|              18622136|           19665186|1609282800|21171600|\n",
+      "|              18724280|           19772399|1604530800|    null|\n",
+      "|              18724280|           19772400|1636066800|31536000|\n",
+      "+----------------------+-------------------+----------+--------+\n",
       "\n"
      ]
     },
@@ -228,12 +253,12 @@
      "data": {
       "text/plain": [
        "import org.apache.spark.sql.expressions.Window\n",
-       "w: org.apache.spark.sql.expressions.WindowSpec = org.apache.spark.sql.expressions.WindowSpec@7dd1e82a\n",
+       "w: org.apache.spark.sql.expressions.WindowSpec = org.apache.spark.sql.expressions.WindowSpec@7ca8d234\n",
        "diff: org.apache.spark.sql.Column = (CAST(maturity AS BIGINT) - CAST(lag(maturity, 1, NULL) OVER (PARTITION BY origin_contract_number ORDER BY maturity ASC NULLS FIRST unspecifiedframe$()) AS BIGINT))\n",
-       "trade_details_snapshot2: org.apache.spark.sql.DataFrame = [trade_number: string]\n"
+       "trade_details_snapshot2: org.apache.spark.sql.DataFrame = [origin_contract_number: string, origin_trade_number: string ... 2 more fields]\n"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
